common-applications/test-environment/dbgpt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: dbgpt
  name: dbgpt
