common-applications/test-environment/dbgpt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbgpt-service
  namespace: dbgpt
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: dbgpt
  type: ClusterIP
