common-applications/test-environment/dbgpt/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: dbgpt-ingress
  namespace: dbgpt
spec:
  tls:
    - hosts:
      - dbgpt.test.osinfra.cn
      secretName: dbgpt-tls
  rules:
    - host: dbgpt.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: dbgpt-service
            servicePort: 8000
          path: /
